--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "ConnectionStrings": {
+
+    //CONEXAO CARLOS
+    "SqlConnection": "Data Source=DESKTOP-711TURH\\SQLEXPRESS;Initial Catalog=IdentityDapper;Trusted_Connection=True;Integrated Security=true; Encrypt=false;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
