--- a/appsettings.json
+++ b/appsettings.json
@@ -2,7 +2,15 @@
   "ConnectionStrings": {
 
     //CONEXAO CARLOS
-    "SqlConnection": "Data Source=DESKTOP-711TURH\\SQLEXPRESS;Initial Catalog=IdentityDapper;Trusted_Connection=True;Integrated Security=true; Encrypt=false;"
+    "SqlConnection": "Data Source=DESKTOP-EOK5HPQ\\SQLEXPRESS;Initial Catalog=IdentityDapper;Trusted_Connection=True;Integrated Security=true; Encrypt=false;"
+  },
+  "Jwt": {
+    "Key": "tokenJwtIdentityToDapperAspNetCore6"
+  },
+  "TokenConfiguration": {
+    "Audience": "Dapper_Audience",
+    "Issuer": "Dapper_Issuer",
+    "ExpireHours": 1
   },
   "Logging": {
     "LogLevel": {
